# opsline

./: Cargo.toml  LICENSE  README.md  TODO  ps1.sh
.cargo/: config.toml
.github/: dependabot.yml
src/: configuration.rs  fonts.rs  main.rs  powerline.rs  ps1.sh  shell.rs  theme.rs
src/segments/: containers.rs  cwd.rs  devwrap.rs  git.rs  kube.rs  mod.rs  newline.rs  readonly.rs  root.rs  ssh.rs  terraform.rs
src/theme/: default.rs  gruvbox.rs  mod.rs
src/utils/: mod.rs  ureq_unix.rs
