[package]
name = "opsline"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "cargo"] }
git2 = { version = "0.20.3", default-features = false, features = ["vendored-libgit2"] }
kube = { version = "3.0.1", features = ["config"] }
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = { version = "3.1.4", features = ["json"] }
