[package]
name = "opsline"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo"] }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
kube = { version = "3.1.0", features = ["config"] }
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "3.3.0", features = ["json"] }
